changed font, fixed issue with image stretching on resize

--- a/style.css
+++ b/style.css
@@ -3,24 +3,20 @@ html, body {
   height: 90%;
 }
 
-h1#title {
-    font-size: 90px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Open Sans';
-  }
+h1#pageTitle {
+    font-family: 'Raleway Light';
+    font-size: 32px;
+    }
 
 header {
     text-align: center;
-}
-
-header h1#title {
-  font-size: 32px;
 }
 
 div#categories h1 a:link {
     color: white;
     font-style: normal;
     text-decoration: none;
-    
+    font-family: 'Raleway Light';
 }
 
 div#categories h1 a:visited {
@@ -36,10 +32,14 @@ div#categories h1 a:hover {
 div#navigation span {
     display: inline-block;
     font-size: 11px;
-    line-height: 1em;
-    letter-spacing: .35em;
+    line-height: 10px;
+    letter-spacing: 1px;
     vertical-align: top;
-    padding: 30px 3% 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 4%;
+    padding-right: 4%;
+    font-family: 'Helvetica Neue';
   }
 
 div.whiteSpace {
@@ -68,6 +68,7 @@ div#categories h1 {
   font-size: 50px;
   margin-bottom: 0px;
   margin-top: 0px;
+  font-family: 'Raleway Light';
 }
 
 div#categories h4 {
@@ -76,11 +77,12 @@ div#categories h4 {
   padding-bottom: 35px;
   padding-left: 0%;
   margin-top: 0px;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'Open Sans Light';
 }
 
 div#categories p {
   font-size: 17px;
+  font-family: 'Raleway Light';
 }
 
 div#navigation {
@@ -93,11 +95,8 @@ div#navigation {
 img.mainPhoto {
   width: 50%;
   position: absolute;
-  margin-top: auto;
-  margin-bottom: auto;
   right: 2%;
   top: 2%;
-  max-height: 95%;
 }
 
 @media screen and (max-width:1000px){
@@ -127,10 +126,12 @@ div#pitch p {
   padding-top: 17px;
   margin-left: 10px;
   margin-bottom: 0px;
+  font-family: 'Open Sans Regular';
 }
 
 div#pitch h2{
   font-size: 27px;
   margin-left: 10px;
   margin-top: 0px;
+  font-family: 'Raleway Light';
 }
